# cli-lxd

./: Cargo.toml
.github/workflows/: build-and-test.yaml
src/: main.rs
