[package]
name = "cli-lxd"
version = "0.1.0"
authors = ["Arnau Diaz <diazarnau0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
reqwest = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
